[package]
name = "wisktrack"
version = "0.1.0"
authors = ["Saravanan Shanmugham <sarvi@cisco.com>"]
description = "LD_PRELOAD based depedency tracker"
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/sarvi/wisktrack"
repository = "https://github.com/sarvi/wisktrack"
keywords = ["LD_PRELOAD", "filesystem", "tracker", "build", "dependencies"]
# categories = ["command-line-utilities"]

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

# [dependencies.redhook]
# path = "../redhook"

[dependencies]
redhook = { git = "https://github.com/sarvi/redhook.git" }
uuid = { version = "0.8", features = ["serde", "v4"] }
libc = { version = "0.2.72" }
ctor = { version = "0.1.15" }
paste = "1.0.0"
lazy_static = { version = "1.4.0" }
tracing = { version = "0.1.17" }
env_logger = "*"
tracing-subscriber = {version = "0.2.9", features = ["chrono", "env-filter", "fmt"]}
test-env-log = {version = "0.2.2", features = ["trace"] }
tracing-appender = {version =  "0.1.1"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base-62 = "0.1.1"
filepath = "0.1.1"
backtrace = "0.3.50"
nix = "0.18.0"
config = "0.10.1"

# [profile.dev]
# Optimize by default so we don't need to remember to always pass in --release
# opt-level = 3
